@@ -8,7 +8,6 @@ import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertTrue;
 
 import java.io.File;
-import java.io.FileReader;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -18,8 +17,6 @@ import java.util.stream.Stream;
 
 import org.junit.Before;
 import org.junit.Test;
-
-import com.opencsv.CSVReader;
 
 import info.freelibrary.util.Constants;
 import info.freelibrary.util.StringUtils;
@@ -48,48 +45,108 @@ import info.freelibrary.iiif.presentation.v3.utils.TestUtils;
  */
 public class ManifestTest extends AbstractTest {
 
-    /** An encoded test ID. */
+    /**
+     * An encoded test ID.
+     */
     private static final String ENCODED_MANIFEST_THUMBNAIL_ARK = "ark:%2F21198%2Fz1d79t3q";
 
-    /** A test height. */
+    /**
+     * A test height.
+     */
     private static final int HEIGHT = 8176;
 
-    /** A constant for the HTTPS protocol. */
+    /**
+     * A constant for the HTTPS protocol.
+     */
     private static final String HTTPS = "https://";
 
-    /** A test manifest ID. */
+    /**
+     * A test manifest ID.
+     */
     private static final String MANIFEST_ID = "ark:%2F21198%2Fz1960050";
 
-    /** A fake IIIF server. */
+    /**
+     * A fake IIIF server.
+     */
     private static final String MANIFEST_SERVER = "https://sinai-images.library.ucla.edu/iiif/";
 
-    /** A test thumbnail path. */
+    /**
+     * A test thumbnail path.
+     */
     private static final String MANIFEST_THUMBNAIL_PATH = "/0,1022,6132,6132/150,150/0/default.jpg";
 
-    /** A test manifest thumbnail URI. */
+    /**
+     * A test manifest thumbnail URI.
+     */
     private static final String MANIFEST_THUMBNAIL_URI =
             MANIFEST_SERVER + ENCODED_MANIFEST_THUMBNAIL_ARK + MANIFEST_THUMBNAIL_PATH;
 
-    /** A test manifest URI. */
+    /**
+     * A test manifest URI.
+     */
     private static final String MANIFEST_URI = MANIFEST_SERVER + MANIFEST_ID + "/manifest";
 
-    /** A test list of metadata pairs. */
+    /**
+     * A test list of metadata pairs.
+     */
     private static final List<String[]> METADATA_PAIRS = Stream.of( //
-            new String[] { "Title", "Georgian NF Fragment 68a" }, //
-            new String[] { "Extent", "1 f" }, //
-            new String[] { "Overtext Language", "Georgian" }, //
-            new String[] { "Undertext Language(s)", "Christian Palestinian Aramaic" }).toList();
+            new String[]{"Title", "Georgian NF Fragment 68a"}, //
+            new String[]{"Extent", "1 f"}, //
+            new String[]{"Overtext Language", "Georgian"}, //
+            new String[]{"Undertext Language(s)", "Christian Palestinian Aramaic"}).toList();
 
-    /** A test fixture. */
+    private static final String data1 = """
+        "GeoNF-frg68a_001r_K-64-001_KTK_pseudo_avgUV-MB780IR", "ark:%2F21198%2Fz1d79t3q"
+        "GeoNF-frg68a_001r_K-64-001_KTK_pseudo_avgUV-VIS", "ark:%2F21198%2Fz18g92cc"
+        "GeoNF-frg68a_001r_K-64-001_KTK_pseudo_WBUVB47-MB780IR", "ark:%2F21198%2Fz1w672gs"
+        "GeoNF-frg68a_001r_K-64-001_KTK_pseudo_WBUVB47-VIS", "ark:%2F21198%2Fz1rj5167"
+        "GeoNF-frg68a_001r_K-64-001_KTK_pseudo_WBUVG58-MB780IR", "ark:%2F21198%2Fz1ms48gh"
+        "GeoNF-frg68a_001r_K-64-001_KTK_pseudo_WBUVG58-VIS", "ark:%2F21198%2Fz1h13hqn"
+        "GeoNF-frg68a_001r_K-64-001_KTK_pseudo_WBUVO22-MB780IR", "ark:%2F21198%2Fz1c82s0b"
+        "GeoNF-frg68a_001r_K-64-001_KTK_pseudo_WBUVR25-MB780IR", "ark:%2F21198%2Fz13r18m5"
+        "GeoNF-frg68a_001r_K-64-001_KTK_pseudo_WBUVUVP-MB780IR", "ark:%2F21198%2Fz1ks7787"
+        "GeoNF-frg68a_001r_K-64-001_KTK_raking_RE870IR-RS870IR", "ark:%2F21198%2Fz1b85qvj"
+        "GeoNF-frg68a_001r_K-64-001_KTK_sharpie_avgUV-MB780IR", "ark:%2F21198%2Fz16h5052"
+        "GeoNF-frg68a_001r_K-64-001_KTK_sharpie_WBUVB47-MB780IR", "ark:%2F21198%2Fz1pk0xvb"
+        "GeoNF-frg68a_001r_K-64-001_KTK_sharpie_WBUVUVP-MB780IR", "ark:%2F21198%2Fz1d22dbh"
+        "GeoNF-frg68a_001r_K-64-001_KTK_txratio_TX940IR-MB940IR", "ark:%2F21198%2Fz14m9m97"
+    """;
+
+    private static final String data2 = """
+        "GeoNF-frg68a_001v_K-64-002_KTK_pseudo_avgUV-MB780IR", "ark:%2F21198%2Fz1w38c11"
+        "GeoNF-frg68a_001v_K-64-002_KTK_pseudo_avgUV-VIS", "ark:%2F21198%2Fz1rb7m99"
+        "GeoNF-frg68a_001v_K-64-002_KTK_pseudo_WBUVB47-MB780IR", "ark:%2F21198%2Fz1c542k0"
+        "GeoNF-frg68a_001v_K-64-002_KTK_pseudo_WBUVB47-VIS", "ark:%2F21198%2Fz17d39wq"
+        "GeoNF-frg68a_001v_K-64-002_KTK_pseudo_WBUVG58-MB780IR", "ark:%2F21198%2Fz13n2k3h"
+        "GeoNF-frg68a_001v_K-64-002_KTK_pseudo_WBUVG58-VIS", "ark:%2F21198%2Fz1zw22m6"
+        "GeoNF-frg68a_001v_K-64-002_KTK_pseudo_WBUVO22-MB780IR", "ark:%2F21198%2Fz1v419ws"
+        "GeoNF-frg68a_001v_K-64-002_KTK_pseudo_WBUVR25-MB780IR", "ark:%2F21198%2Fz1kk9th3"
+        "GeoNF-frg68a_001v_K-64-002_KTK_pseudo_WBUVUVP-MB780IR", "ark:%2F21198%2Fz12n5hzq"
+        "GeoNF-frg68a_001v_K-64-002_KTK_raking_RE870IR-RS870IR", "ark:%2F21198%2Fz1t448sv"
+        "GeoNF-frg68a_001v_K-64-002_KTK_sharpie_avgUV-MB780IR", "ark:%2F21198%2Fz1pc3j30"
+        "GeoNF-frg68a_001v_K-64-002_KTK_sharpie_WBUVB47-MB780IR", "ark:%2F21198%2Fz15d97j2"
+        "GeoNF-frg68a_001v_K-64-002_KTK_sharpie_WBUVUVP-MB780IR", "ark:%2F21198%2Fz1vx0z84"
+        "GeoNF-frg68a_001v_K-64-002_KTK_txratio_TX940IR-MB940IR", "ark:%2F21198%2Fz1mg8563"
+    """;
+
+    /**
+     * A test fixture.
+     */
     private static final String SINAI_JSON = new File(TestUtils.TEST_DIR, "z1960050.json").getAbsolutePath();
 
-    /** A test width. */
+    /**
+     * A test width.
+     */
     private static final int WIDTH = 6132;
 
-    /** The test manifest. */
+    /**
+     * The test manifest.
+     */
     private Manifest myManifest;
 
-    /** A minter to use in testing. */
+    /**
+     * A minter to use in testing.
+     */
     private final Minter myMinter = MinterFactory.getMinter(HTTPS + UUID.randomUUID().toString());
 
     /**
@@ -99,16 +156,21 @@ public class ManifestTest extends AbstractTest {
      */
     @Before
     public void setUp() throws IOException {
-        final CSVReader reader1 = new CSVReader(new FileReader("src/test/resources/csv/sinai-images-canvas-1.csv"));
-        final CSVReader reader2 = new CSVReader(new FileReader("src/test/resources/csv/sinai-images-canvas-2.csv"));
-        final List<String[]> firstCanvas = reader1.readAll();
-        final List<String[]> secondCanvas = reader2.readAll();
         final List<Metadata> metadata = new ArrayList<>();
         final List<Canvas> canvases = new ArrayList<>();
         final ImageService3 manifestThumbService;
 
-        reader1.close();
-        reader2.close();
+        final List<String[]> firstCanvas = Arrays.stream(data1.split("\\R"))
+            .filter(line -> !line.isBlank())
+            .map(line -> line.replaceAll("^\"|\"$", "")) // Remove leading/trailing quotes
+            .map(line -> line.split("\",\\s*\""))
+            .toList();
+
+        final List<String[]> secondCanvas = Arrays.stream(data1.split("\\R"))
+            .filter(line -> !line.isBlank())
+            .map(line -> line.replaceAll("^\"|\"$", "")) // Remove leading/trailing quotes
+            .map(line -> line.split("\",\\s*\""))
+            .toList();
 
         for (final String[] kvPair : METADATA_PAIRS) {
             metadata.add(new Metadata(kvPair[0], kvPair[1]));
@@ -116,7 +178,7 @@ public class ManifestTest extends AbstractTest {
 
         manifestThumbService = new ImageService3(MANIFEST_SERVER + ENCODED_MANIFEST_THUMBNAIL_ARK, Profile.LEVEL_TWO);
 
-        myManifest = new Manifest(MANIFEST_URI, new Label(METADATA_PAIRS.get(0)[1]));
+        myManifest = new Manifest(MANIFEST_URI, new Label(METADATA_PAIRS.getFirst()[1]));
         myManifest.setMetadata(metadata);
         myManifest.setThumbnails(new ImageContent(MANIFEST_THUMBNAIL_URI).setServices(manifestThumbService));
 
@@ -202,10 +264,10 @@ public class ManifestTest extends AbstractTest {
      */
     @Test
     public void testConstructorStringLabel() {
-        myManifest = new Manifest(MANIFEST_URI, new Label(METADATA_PAIRS.get(0)[1]));
+        myManifest = new Manifest(MANIFEST_URI, new Label(METADATA_PAIRS.getFirst()[1]));
         assertEquals(MANIFEST_URI, myManifest.getID());
         assertTrue(myManifest.getLabel().isPresent());
-        assertEquals(METADATA_PAIRS.get(0)[1], myManifest.getLabel().get().getString());
+        assertEquals(METADATA_PAIRS.getFirst()[1], myManifest.getLabel().get().getString());
     }
 
     /**
@@ -267,19 +329,10 @@ public class ManifestTest extends AbstractTest {
      * Tests {@link NavigableResource#equals(Object) NavigableResource}.
      */
     @Test
-    public final void testNavigableResourceEqualsSameObject() {
-        final Manifest test = new Manifest(HTTPS + UUID.randomUUID().toString(), new Label("label"));
-        assertEquals(test, test);
-    }
-
-    /**
-     * Tests {@link NavigableResource#equals(Object) NavigableResource}.
-     */
-    @Test
     @SuppressWarnings("unlikely-arg-type")
     public final void testNavigableResourceEqualsString() {
         final Manifest test = new Manifest(HTTPS + UUID.randomUUID().toString(), new Label("three"));
-        assertNotEquals(test, new String(Constants.EMPTY));
+        assertNotEquals(Constants.EMPTY, test);
     }
 
     /**
